agent: Register the agent whenever geoclue starts

The agent watches on d-bus and registers whenever it sees geoclue getting
alive.

https://gitlab.freedesktop.org/geoclue/geoclue/issues/68